--- a/Practice_module/views/menu.xml
+++ b/Practice_module/views/menu.xml
@@ -16,4 +16,10 @@
               parent="hospital_root_menu"
               sequence="0"/>
 
+
+    <menuitem id="menu_configuration"
+              name="Configurations"
+              parent="hospital_root_menu"
+              sequence="0"/>
+
 </odoo>
