--- a/Practice_module/views/patient.xml
+++ b/Practice_module/views/patient.xml
@@ -25,8 +25,10 @@
                         <group>
                             <field name="name"/>
                             <field name="gender"/>
+                            <field name="tag_id"/>
                         </group>
                         <group>
+                            <field name="appointment_id"/>
                             <field name="ref"/>
                             <field name="date_of_birth"/>
                             <field name="age"/>
